tests/baselines/reference/propertyOverridesAccessors2.errors.txt
tests/cases/conformance/classes/propertyMemberDeclarations/propertyOverridesAccessors2.ts(7,3): error TS2610: Class 'Base' defines instance member accessor 'x', but extended class 'Derived' defines it as instance member property.


==== tests/cases/conformance/classes/propertyMemberDeclarations/propertyOverridesAccessors2.ts (1 errors) ====
    class Base {
      get x() { return 2; }
      set x(value) { console.log(`x was set to ${value}`); }
    }
    
    class Derived extends Base {
      x = 1;
      ~
!!! error TS2610: Class 'Base' defines instance member accessor 'x', but extended class 'Derived' defines it as instance member property.
    }
    
    const obj = new Derived(); // prints 'x was set to 1'
    console.log(obj.x); // 2
    